--- a/1.html
+++ b/1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" src="testrepo/1.css">
+    <link rel="stylesheet" href="F:\FRONT-END\testrepo\1.css">
 </head>
 <body>
     <h1>my name is para jithendra teja</h1>
